added method for lifting enums. Also added 3 different tests for lifting enums.